# caption-compiler

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: entry.rs  header.rs  main.rs
tests/: captions.rs
tests/compilation/: invalid_format.txt  invalid_format2.txt  invalid_length_exceeds_8192.txt  valid_english.txt  valid_length_equals_8192.txt  valid_russian.txt
