[package]
name = "caption-compiler"
version = "0.1.2"
authors = ["Kara <https://github.com/Karalynx>"]
description = "Compiles and describes Valve's closed caption files"
readme = "README.md"
edition = "2021"
keywords = ["valve", "source-engine", "closed-captions", "cli"]
categories = ["command-line-utilities", "game-development"]
repository = "https://github.com/Karalynx/caption-compiler"
license = "GPL-3.0"
exclude = [
	".gitignore",
	".github/*"
]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crc32fast = "1.4.2"
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
keyvalues-parser = "0.2.0"
